# fastapi-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  pyproject.toml  sample.env
.docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
alembic/: env.py
alembic/versions/: 2025_07_13_1530-9de33de2c651_initial.py
src/: config.py  main.py
src/api/v1/: auth.py
src/auth/: __init__.py  depends.py  dtos.py  models.py  repository.py  service.py
src/common/: __init__.py
src/common/abstractions/: __init__.py  dto.py  model.py  repository.py
src/databases/: __init__.py
src/databases/postgres/: __init__.py  config.py  connection.py  mixins.py
src/databases/redis/: __init__.py  config.py  connection.py
src/logger/: __init__.py  config.py
src/users/: __init__.py  dtos.py  enums.py  models.py  repository.py
src/utils/: __init__.py  auth.py  smtp.py
tests/unit/auth/: conftest.py
tests/unit/auth/v1/: test_auth.py
